@@ -1495,11 +1495,6 @@ CREATE DATABASE,ALTER DATABASE,DROP DATABASE</pre>
     <dd>Define whether phpMyAdmin will continue executing a multi-query
         statement if one of the queries fails. Default is to abort execution.</dd>
 
-    <dt id="cfg_VerboseMultiSubmit">$cfg['VerboseMultiSubmit'] boolean</dt>
-    <dd>Define whether phpMyAdmin will output the results of each query of a
-        multi-query statement embedded into the
-        <abbr title="structured query language">SQL</abbr> output as inline
-        comments. Defaults to <code>TRUE</code>.</dd>
     <dt id="AllowArbitraryServer">
         <span id="cfg_AllowArbitraryServer">$cfg['AllowArbitraryServer']</span> boolean</dt>
     <dd>If enabled, allows you to log in to arbitrary servers using cookie auth and permits to specify servers of your choice in the Synchronize dialog.
