@@ -521,8 +521,6 @@ $strConfigUseDbSearch_desc = __('Allow for searching inside the entire database'
 $strConfigUseDbSearch_name = __('Use database search');
 $strConfigUserprefsDeveloperTab_desc = __('When disabled, users cannot set any of the options below, regardless of the checkbox on the right');
 $strConfigUserprefsDeveloperTab_name = __('Enable the Developer tab in settings');
-$strConfigVerboseMultiSubmit_desc = __('Show affected rows of each statement on multiple-statement queries. See libraries/import.lib.php for defaults on how many queries a statement may contain.');
-$strConfigVerboseMultiSubmit_name = __('Verbose multiple statements');
 $strConfigVersionCheckLink = __('Check for latest version');
 $strConfigVersionCheck_desc = __('Enables check for latest version on main phpMyAdmin page');
 $strConfigVersionCheck_name = __('Version check');
